# science-rag

./: .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
science_rag/: __init__.py  config.py  dataset.py  llm_agent.py  main.py  rag_example.py  single_rag_agent.py  telegram_bot.py  tools.py
science_rag/agents/: __init__.py  answer_agent.py  retrieval_grader_agent.py  retriever_agent.py
