[project]
authors = [
    {name = "Kirill Duvakin"},
    {name = "Vasilii Filin"}
]
dependencies = []
description = "Add a short description here"
name = "pixxi"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixxi = { path = ".", editable = true }

[tool.pixi.tasks]
